--- a/Writerside/cfg/static/Catppuccin.css
+++ b/Writerside/cfg/static/Catppuccin.css
@@ -321,6 +321,8 @@
 
 .toc--theme-dark {
     background: var(--wh-color-bg-main);
+    background: rgb(239, 241, 245);
+    background: var(--wh-color-bg-main);
 }
 
 .toc-item--highlighted.toc-item--theme-dark {
@@ -569,4 +571,68 @@
     font-family: "Eudoxus Sans", sans-serif;
     font-weight: bold;
     color: rgb(234, 118, 203);
+}
+
+.prism--token.prism--cdata,
+.prism--token.prism--comment,
+.prism--token.prism--doctype,
+.prism--token.prism--prolog {
+    color: rgb(92, 95, 119);
+}
+.prism--token.prism--punctuation {
+    color: #999;
+}
+.prism--token.prism--namespace {
+    opacity: 0.7;
+}
+.prism--token.prism--boolean,
+.prism--token.prism--constant,
+.prism--token.prism--deleted,
+.prism--token.prism--number,
+.prism--token.prism--property,
+.prism--token.prism--symbol,
+.prism--token.prism--tag {
+    color: rgb(254, 100, 11);
+}
+.prism--token.prism--attr-name,
+.prism--token.prism--builtin,
+.prism--token.prism--char,
+.prism--token.prism--inserted,
+.prism--token.prism--selector,
+.prism--token.prism--string {
+    color: rgb(64, 160, 43);
+}
+.language-css .prism--token.prism--string,
+.prism--token.prism--entity,
+.prism--token.prism--operator,
+.prism--token.prism--url,
+.style .prism--token.prism--string {
+    color: rgb(223, 142, 29);
+    background: hsla(0, 0%, 100%, 0.5);
+}
+.prism--token.prism--atrule,
+.prism--token.prism--attr-value,
+.prism--token.prism--keyword {
+    color: rgb(4, 165, 229);
+}
+.prism--token.prism--function {
+    color: #00627a;
+}
+.prism--token.prism--class-name {
+    color: #000;
+}
+.prism--token.prism--important,
+.prism--token.prism--variable,
+.prism--token.regex {
+    color: rgb(230, 69, 83);
+}
+.prism--token.prism--bold,
+.prism--token.prism--important {
+    font-weight: 700;
+}
+.prism--token.prism--italic {
+    font-style: italic;
+}
+.prism--token.prism--entity {
+    cursor: help;
 }
