--- a/Writerside/cfg/static/Catppuccin.css
+++ b/Writerside/cfg/static/Catppuccin.css
@@ -120,7 +120,7 @@
     --app-header: var(--wh-color-bg-main);
     --app-footer: var(--wh-color-bg-main);
     --actual-primary-color: 114, 135, 253;
-    --actual-secondary-color: 230, 69, 83;
+    --actual-secondary-color: 234, 153, 156;
     --75-alpha: 0.75;
     --50-alpha: 0.5;
     --25-alpha: 0.25;
@@ -158,7 +158,7 @@
     --wh-color-bg-main: rgb(48, 52, 70);
     --wh-color-text-main: rgb(76, 79, 105);
     --wh-color-secundary: rgb(230, 69, 83);
-    --wh-code-block-bg:rgb(65, 69, 89);
+    --wh-code-block-bg: rgb(65, 69, 89);
 
     --primary-color-75: rgba(var(--actual-primary-color), var(--75-alpha));
     --primary-color-50: rgba(var(--actual-primary-color), var(--50-alpha));
@@ -193,10 +193,16 @@
     background: var(--wh-color-bg-main);
 }
 
+/* Color del thumb en el tema claro */
 *::-webkit-scrollbar-thumb {
     background-color: rgb(var(--actual-secondary-color));
     border-radius: 0.5em;
     border: 1px transparent;
+}
+
+/* Color del thumb en el tema oscuro */
+:root.theme-dark ::-webkit-scrollbar-thumb {
+    background-color: rgb(234, 153, 156);
 }
 
 .code-block {
@@ -232,6 +238,11 @@
     color: rgb(var(--actual-secondary-color));
     border-radius: 0.5em;
     border: 1px transparent;
+}
+
+:root.theme-dark .code {
+    background: var(--wh-code-block-bg);
+    color: rgb(181, 191, 226);
 }
 
 
@@ -290,8 +301,21 @@
     color: rgb(230, 69, 83);
 }
 
-/* product name */
-.wh-header__product-name {
+:root.theme-dark ._modeClear_joawza_434._dark_joawza_62 {
+    color: var(--secondary-color-75);
+}
+
+:root.theme-dark ._modeClear_joawza_434._dark_joawza_62:hover {
+    color: rgb(234, 153, 156);
+}
+
+/* Header light colors */
+.wh-header {
+    color: var(--wh-color-primary);
+}
+
+/* Header dark colors */
+:root.theme-dark .wh-header {
     color: var(--wh-color-primary);
 }
 
@@ -317,12 +341,19 @@
     font-weight:bold;
     color: rgb(186, 187, 241);
 }
+/* This selector edit the selected hover topic colors and behavior for dark theme */
+.toc-item--selected.toc-item--theme-dark:hover {
+    border-top-right-radius: 0.0em;
+    border-bottom-right-radius: 0.0em;
+    font-weight:bold;
+    color: rgb(244, 184, 228);
+    background-color: rgb(35, 38, 52);
+}
 
 .toc-item--highlighted:first-child:last-child {
     border-top-right-radius: 0em;
     border-bottom-right-radius: 0em;
 }
-
 
 .toc-item--selected:hover, .toc-item--theme-light:hover {
     border-top-right-radius: 0em;
@@ -334,13 +365,17 @@
 .toc-item--theme-dark:hover{
     border-top-right-radius: 0em;
     border-bottom-right-radius: 0em;
-    background-color: rgb(35, 38, 52);
+    background-color: rgb(65, 69, 89);
     color: rgb(244, 184, 228);
 }
+/*.toc-item--selected:hover{
+    background-color: rgb(35, 38, 52);
+    color: rgb(234, 118, 203);
+}*/
 
-.toc-item--highlighted:hover {
-    color:rgb(234, 118, 203);
-}
+/*.toc-item--highlighted:hover {
+    color:rgb(244, 184, 228);
+}*/
 
 .toc--theme-dark {
     background: rgb(48, 52, 70);
@@ -352,9 +387,19 @@
 
 }
 
+.toc-item--highlighted.toc-item--theme-dark:hover {
+    background: rgb(41, 44, 60);
+    font-weight:bold;
+
+}
+
 .toc-item--highlighted.toc-item--theme-light {
     background: rgb(230, 233, 239);
     font-weight:bold;
+}
+
+.toc-item--theme-light:hover{
+    color:rgb(234, 118, 203);
 }
 
 
@@ -377,6 +422,7 @@
 /* weird bar right at the end of secondary in topics and top of footer, aka where the footer nav links are ig */
 .navigation-links {
     border-top: 1px transparent;
+
 }
 
 /* label and title backdrop roudning and gradient adjustment */
@@ -534,15 +580,17 @@
     border-radius: 0.5em;
 }
 
-.title__content {
-    font-family: "Eudoxus Sans", sans-serif;
-    font-weight: bolder;
-    color: rgb(114, 135, 253);
-}
-
 .article__p {
     font-family: "Poppins", sans-serif;
-    color: rgb(92, 95, 119);
+
+}
+
+p {
+    color: rgb(76, 79, 105); /* Color del texto en el tema claro */
+}
+
+:root.theme-dark p {
+    color: rgb(198, 208, 245); /* Color del texto en el tema oscuro */
 }
 
 
@@ -550,17 +598,74 @@
     font-family: "Eudoxus Sans", sans-serif;
     font-weight: normal;
 
-    
+
+}
+
+/*Edits H selectors*/
+.title__content {
+    font-family: "Eudoxus Sans", sans-serif;
+    font-weight: bolder;
+    /*color: rgb(114, 135, 253);*/
+}
+
+:root.theme-dark .article__h1 {
+    color: rgb(186, 187, 241);
+}
+
+:root.theme-dark .article__h2 {
+    color: rgb(244, 184, 228);
+}
+
+:root.theme-dark .article__h3 {
+    color: rgb(129, 200, 190);
+}
+
+:root.theme-dark .article__h4 {
+    color: rgb(229, 200, 144);
+}
+
+:root.theme-dark .article__h5 {
+    color: rgb(234, 153, 156);
+}
+
+:root.theme-dark .article__h6 {
+    color: rgb(239, 159, 118);
+}
+
+.article__h1 {
+    color: rgb(114, 135, 253);
+}
+
+.article__h2 {
+    color: rgb(234, 118, 203);
+}
+
+.article__h3 {
+    color: rgb(23, 146, 153);
+}
+
+.article__h4 {
+    color: rgb(223, 142, 29);
+}
+
+.article__h5 {
+    color: rgb(230, 69, 83);
+}
+
+.article__h6 {
+    color: rgb(254, 100, 11);
 }
 
 .rs-h1 {
     font-family: "Eudoxus Sans", sans-serif;
     font-weight: bolder;
+
 }
 
 .rs-h2 {
     font-family: "Eudoxus Sans", sans-serif;
     font-weight: bold;
+
 }
 
 .rs-h3 {
@@ -576,6 +681,7 @@
 .rs-text-2 {
     font-family: "Poppins", sans-serif;
     font-weight: normal;
+
 }
 
 .rs-text-3 {
@@ -583,6 +689,7 @@
     font-weight: bold;
 }
 
+/*Navigation links on light theme*/
 .navigation-links__next {
     font-family: "Eudoxus Sans", sans-serif;
     font-weight: bold;
@@ -595,6 +702,13 @@
     color: rgb(234, 118, 203);
 }
 
+/*Navigation links on dark theme*/
+:root.theme-dark .navigation-links__prev,
+:root.theme-dark .navigation-links__next {
+    color: rgb(244, 184, 228); /* Color de los enlaces en el tema oscuro */
+}
+
+/*Code hihglight for light theme*/
 .prism--token.prism--cdata,
 .prism--token.prism--comment,
 .prism--token.prism--doctype,
@@ -657,3 +771,67 @@
 .prism--token.prism--entity {
     cursor: help;
 }
+
+/*Code hihglight for dark theme*/
+    :root.theme-dark .prism--token.prism--cdata,
+    :root.theme-dark .prism--token.prism--comment,
+    :root.theme-dark .prism--token.prism--doctype,
+    :root.theme-dark .prism--token.prism--prolog {
+        color: rgb(181, 191, 226);
+    }
+    :root.theme-dark .prism--token.prism--punctuation {
+        color: rgb(181, 191, 226);
+    }
+    :root.theme-dark .prism--token.prism--namespace {
+        opacity: 0.7;
+    }
+    :root.theme-dark .prism--token.prism--boolean,
+    :root.theme-dark .prism--token.prism--constant,
+    :root.theme-dark .prism--token.prism--deleted,
+    :root.theme-dark .prism--token.prism--number,
+    :root.theme-dark .prism--token.prism--property,
+    :root.theme-dark .prism--token.prism--symbol,
+    :root.theme-dark .prism--token.prism--tag {
+        color: rgb(239, 159, 118);
+    }
+:root.theme-dark .prism--token.prism--attr-name,
+:root.theme-dark .prism--token.prism--builtin,
+:root.theme-dark .prism--token.prism--char,
+:root.theme-dark .prism--token.prism--inserted,
+:root.theme-dark .prism--token.prism--selector,
+:root.theme-dark .prism--token.prism--string {
+        color: rgb(166, 209, 137);
+    }
+    :root.theme-dark .language-css .prism--token.prism--string,
+    :root.theme-dark .prism--token.prism--entity,
+    :root.theme-dark.prism--token.prism--operator,
+    :root.theme-dark .prism--token.prism--url,
+    :root.theme-dark .style .prism--token.prism--string {
+        color: rgb(229, 200, 144);
+    }
+    :root.theme-dark .prism--token.prism--atrule,
+    :root.theme-dark .prism--token.prism--attr-value,
+    :root.theme-dark .prism--token.prism--keyword {
+        color: rgb(153, 209, 219);
+    }
+    :root.theme-dark .prism--token.prism--function {
+        color: rgb(202, 158, 230);
+    }
+    :root.theme-dark .prism--token.prism--class-name {
+        color: rgb(140, 170, 238);
+    }
+    :root.theme-dark .prism--token.prism--important,
+    :root.theme-dark .prism--token.prism--variable,
+    :root.theme-dark .prism--token.regex {
+        color: rgb(234, 153, 156);
+    }
+:root.theme-dark .prism--token.prism--bold,
+:root.theme-dark .prism--token.prism--important {
+        font-weight: 700;
+    }
+:root.theme-dark .prism--token.prism--italic {
+        font-style: italic;
+    }
+:root.theme-dark .prism--token.prism--entity {
+        cursor: help;
+    }
